# force_control

./: README.md  __init__.py
backends/: __init__.py  franka_backend.py  mujoco_backend.py
configs/: real.yaml  sim.yaml
core/: __init__.py  controller.py  data_logger.py  ft_processor.py  ft_world.py  ik.py  interpolation.py  joint_move_state_machine.py  kinematics.py  payload_gravity.py  safety.py  state_machine.py  types.py
data/: payload_gravity_fit.npz
data/logs/: real_20260609_005004.csv  real_20260609_005326.csv  real_20260609_005628.csv  real_20260609_005645.csv  real_20260609_005710.csv  real_20260609_005949.csv  real_20260609_005958.csv  real_20260609_010102.csv  real_20260609_010125.csv  real_20260609_010650.csv  real_20260609_013010.csv  real_20260609_013054.csv  real_20260609_013150.csv  real_20260609_013301.csv
franka_emika_panda/: ft_payload.xml  panda.xml  panda_20260325.xml  panda_20260403.xml  panda_20260405.xml  panda_impedance copy 4.xml  panda_impedance.xml  real_velocity_task_franka_gripper.py  rough_surface.xml  scene.xml  scene_rough_sandpaper.xml  scene_rough_surface.xml
franka_emika_panda/sandpaper/: readme.md  sandpaper_p1000.xml  (+4 more)
pylibfranka/: CMakeLists.txt  __init__.py  joint_impedance_example.py  joint_position_example.py  real_velocity_task_franka_gripper.py  setup.py
pylibfranka/src/: pylibfranka.cpp
scripts/: analyze_log.py  calibrate_payload_gravity.py  check_ft.py  ft_arrival_check.py  ft_node.py  ft_shm_check.py  plot_trajectory.py  run_controller.py  run_real_joint_move.py  test_gravity_comp.py
sensors/: __init__.py  ft_mujoco.py  ft_replay.py  ft_ros.py  ft_shm.py
